--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "intm2",
     "version": "0.1.0",
-    "private": true,
+    "private": false,
     "proxy": "http://localhost:5000",
+    "homepage": "https://diyclassics.github.io/intm2",
     "dependencies": {
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
