--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
+        "@mui/lab": "^5.0.0-alpha.124",
         "@mui/material": "^5.11.14",
         "@react-google-maps/api": "^2.18.1",
         "@react-leaflet/core": "^2.1.0",
